--- a/src/pages/Login/index.module.less
+++ b/src/pages/Login/index.module.less
@@ -1,7 +1,27 @@
 .loginContainer {
-    background-image: url(https://img.freepik.com/free-vector/abstract-halftone-background_23-2148583453.jpg?size=626&ext=jpg);
+    background-image: url("https://www.leoscamera.com/images/cached/BD_Backgrounds_Super_White_Background_Paper_129_27_2000x2000_801d8cd6a39757466658bedfff1e52.jpg");
     background-repeat: no-repeat;
     background-position: center 110px;
     background-size: 100%;
+
     height: 100%;
+
+    .login{
+        padding-top: 200px;
+        width: 400px; //in the lesson was 368px
+        margin: 0 auto; //center
+        //css module cannot change global - antd style
+        //hence need to add :global
+        :global{
+            .ant-tabs .ant-tabs-bar {
+                margin-bottom: 24px;
+                &:before{
+                    border-bottom: 0;//remove the line at bottom 
+                }
+                .ant-tabs-nav-list {
+                    margin: 0 auto;
+                }
+            }
+        }
+    }
 }
