--- a/src/pages/Home/index.module.less
+++ b/src/pages/Home/index.module.less
@@ -1,5 +1,27 @@
+
+// @import '~antd/es/style/themes/default.less';
+
 .container {
     padding: 20px;
     height: 100%;
     background-color: #f0f2f5;
+}
+
+.avatarHolder { 
+    margin-bottom: 24px;
+    text-align: center;
+    & > img {
+        width: 104px;
+        height: 104px;
+        margin-bottom: 20px;
+    }
+
+    .name {
+        margin-bottom: 4px;
+        // color: @heading-color;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 28px;
+    }
+
 }
