--- a/src/pages/Home/index.module.less
+++ b/src/pages/Home/index.module.less
@@ -23,5 +23,22 @@
         font-size: 20px;
         line-height: 28px;
     }
+}
 
+.detail{
+    p {
+       position: relative;
+       margin-bottom: 8px;
+       padding-left: 26px;
+       &:last-child{
+           margin-bottom: 0;
+       }  
+    }
+    .userInfoIcon {
+        position: absolute;
+        top: 4px;
+        left: 0;
+        width: 14px;
+        height: 14px;
+    }
 }
