added register page code

--- a/src/pages/Register/index.module.less
+++ b/src/pages/Register/index.module.less
@@ -24,20 +24,24 @@
 
 .success {
 //   color: @success-color
+  color: green;
 }
 
 .warning {
 //   color: @warning-color
+  color: yellow;
 }
 
 .error {
-//   color: @error-color
+//   color: @error-color;
+  color: red;
 }
 
 .progress-pass > .progress {
   :global {
     .ant-progress-bg {
     //   background-color: @warning-color;
+      background-color: yellow;
     }
   }
 }
